# InternetWhisper

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
redis_data/: dump.rdb
src/_embeddings/: Dockerfile  main.py  nginx.conf  requirements.txt
src/frontend/: Dockerfile  main.py  requirements.txt
src/orchestrator/: Dockerfile  main.py  requirements.txt  test.txt
src/orchestrator/mocks/: test_dict.py
src/orchestrator/models/: document.py  search.py
src/orchestrator/prompt/: __init__.py  prompt.py
src/orchestrator/retrieval/: __init__.py  cache.py  embeddings.py  retriever.py  scraper.py  search.py  splitter.py
src/orchestrator/util/: __init__.py  logger.py
src/scraper/: Dockerfile  main.py  nginx.conf  requirements.txt
