[tool.poetry]
name = "me-com"
version = "0.1.0"
description = ""
authors = ["Santiago Morillo Segovia <santiagomorillosegovia@gmail.com>"]
readme = "README.md"
packages = [{include = "me"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
